feat: add about and blog pages with navigation links

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,6 +13,9 @@
 		<a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
-		<h1>My Astro website</h1>
+		<h1>About Me</h1>
+        <h2>... and my new astro site!</h2>
+        <p>Iam working through Astro's introductory tutorial. This is the second page on my website...</p>
+        <p>...</p>
 	</body>
 </html>
