--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,6 +13,8 @@
 		<a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
-		<h1>My Astro website</h1>
+		<h1>My blog</h1>
+        <h2>Some blogs</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, doloribus! Beatae iusto commodi dicta aliquid quia dolorem temporibus similique, sequi doloribus minus cupiditate voluptatem nulla.</p>
 	</body>
 </html>
