--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,18 @@
 ---
+const pageTitle = "About me";
+
+const identity = {
+	firstName: 'Josue',
+	country: 'Perú',
+	occupation: 'Full stack web developer',
+	hobbies: ['ml', 'researcher']
+};
+
+const skills = ['HTML', 'CSS', 'JavaScript', 'React', 'Astro', 'many more'];
+
+const happy = true;
+const finished = true;
+const goal = 1;
 ---
 
 <html lang="en">
@@ -7,15 +21,31 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
 		<a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
-		<h1>About Me</h1>
+		<h1>{pageTitle}</h1>
         <h2>... and my new astro site!</h2>
         <p>Iam working through Astro's introductory tutorial. This is the second page on my website...</p>
-        <p>...</p>
+        
+		<p>Here are a few facts about me:</p>
+		<ul>
+		<li>My name is {identity.firstName}.</li>
+		<li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+		{identity.hobbies.length >= 2 && 
+			<li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+		} 
+		</ul>
+		<p>My skills are:</p>
+		<ul>
+		{skills.map((skill) => <li>{skill}</li>)}
+		</ul>
+
+		{happy && <p>I am happy to be learning Astro!</p>}
+		{finished && <p>I finished this tutorial</p>}
+		{goal === 1 ? <p>My goal is to finish today.</p> : <p>My goal is not to finish today</p>}
 	</body>
 </html>
