--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle = 'My awesome blog'
 ---
 
 <html lang="en">
@@ -7,14 +8,18 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
 		<a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
-		<h1>My blog</h1>
-        <h2>Some blogs</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, doloribus! Beatae iusto commodi dicta aliquid quia dolorem temporibus similique, sequi doloribus minus cupiditate voluptatem nulla.</p>
+		<h1>{pageTitle}</h1>
+        <h2>Some Posts</h2>
+        <ul>
+            <li><a href="/posts/post-1/">Post 1</a></li>
+            <li><a href="/posts/post-2/">Post 2</a></li>
+            <li><a href="/posts/post-3/">Post 3</a></li>
+        </ul>
 	</body>
 </html>
