--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,17 +2,21 @@
 const pageTitle = "About me";
 
 const identity = {
-	firstName: 'Josue',
-	country: 'Perú',
-	occupation: 'Full stack web developer',
-	hobbies: ['ml', 'researcher']
+	firstName: "Josue",
+	country: "Perú",
+	occupation: "Full stack web developer",
+	hobbies: ["ml", "researcher"],
 };
 
-const skills = ['HTML', 'CSS', 'JavaScript', 'React', 'Astro', 'many more'];
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "many more"];
 
 const happy = true;
 const finished = true;
 const goal = 1;
+
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <html lang="en">
@@ -22,30 +26,59 @@ const goal = 1;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+		<style define:vars={{skillColor, fontWeight, textCase}}>
+			h1 {
+				color: purple;
+				font-size: 4rem;
+			}
+			.skill {
+				color: var(--skillColor);
+				font-weight: var(--fontWeight);
+				text-transform: var(--textCase);
+			}
+		</style>
 	</head>
 	<body>
 		<a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+		<a href="/about/">About</a>
+		<a href="/blog/">Blog</a>
 		<h1>{pageTitle}</h1>
-        <h2>... and my new astro site!</h2>
-        <p>Iam working through Astro's introductory tutorial. This is the second page on my website...</p>
-        
+		<h2>... and my new astro site!</h2>
+		<p>
+			Iam working through Astro's introductory tutorial. This is the
+			second page on my website...
+		</p>
+
 		<p>Here are a few facts about me:</p>
 		<ul>
-		<li>My name is {identity.firstName}.</li>
-		<li>I live in {identity.country} and I work as a {identity.occupation}.</li>
-		{identity.hobbies.length >= 2 && 
-			<li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
-		} 
+			<li>My name is {identity.firstName}.</li>
+			<li>
+				I live in {identity.country} and I work as a {
+					identity.occupation
+				}.
+			</li>
+			{
+				identity.hobbies.length >= 2 && (
+					<li>
+						Two of my hobbies are: {identity.hobbies[0]} and{" "}
+						{identity.hobbies[1]}
+					</li>
+				)
+			}
 		</ul>
 		<p>My skills are:</p>
 		<ul>
-		{skills.map((skill) => <li>{skill}</li>)}
+			{skills.map((skill) => <li class="skill">{skill}</li>)}
 		</ul>
 
 		{happy && <p>I am happy to be learning Astro!</p>}
 		{finished && <p>I finished this tutorial</p>}
-		{goal === 1 ? <p>My goal is to finish today.</p> : <p>My goal is not to finish today</p>}
+		{
+			goal === 1 ? (
+				<p>My goal is to finish today.</p>
+			) : (
+				<p>My goal is not to finish today</p>
+			)
+		}
 	</body>
 </html>
