--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
 import './styles/global.css';
+import Navigation from '../components/Navigation.astro';
 
 const pageTitle = 'My awesome blog'
 ---
@@ -13,9 +14,7 @@ const pageTitle = 'My awesome blog'
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+		<Navigation/>
 		<h1>{pageTitle}</h1>
         <h2>Some Posts</h2>
         <ul>
