--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import './styles/global.css';
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 
 const pageTitle = "About me";
 
@@ -81,5 +82,6 @@ const textCase = "uppercase";
 				<p>My goal is not to finish today</p>
 			)
 		}
+		<Footer/>
 	</body>
 </html>
