--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import './styles/global.css';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import "./styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 
-const pageTitle = 'Home'
+const pageTitle = "Home";
 ---
 
 <html lang="en">
@@ -15,8 +15,11 @@ const pageTitle = 'Home'
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Header/>
+		<Header />
 		<h1>{pageTitle}</h1>
-		<Footer/>
+		<Footer />
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
