--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,6 @@
 ---
-import './styles/global.css';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import '../styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = "About me";
 
@@ -18,73 +17,44 @@ const happy = true;
 const finished = true;
 const goal = 1;
 
-const skillColor = "navy";
-const fontWeight = "bold";
-const textCase = "uppercase";
 ---
+<BaseLayout pageTitle={pageTitle}>
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-		<style define:vars={{skillColor, fontWeight, textCase}}>
-			h1 {
-				color: purple;
-				font-size: 4rem;
-			}
-			.skill {
-				color: var(--skillColor);
-				font-weight: var(--fontWeight);
-				text-transform: var(--textCase);
-			}
-		</style>
-	</head>
-	<body>
-		<Header/>
-		<h1>{pageTitle}</h1>
-		<h2>... and my new astro site!</h2>
-		<p>
-			Iam working through Astro's introductory tutorial. This is the
-			second page on my website...
-		</p>
+	<h2>... and my new astro site!</h2>
+	<p>
+		Iam working through Astro's introductory tutorial. This is the
+		second page on my website...
+	</p>
 
-		<p>Here are a few facts about me:</p>
-		<ul>
-			<li>My name is {identity.firstName}.</li>
-			<li>
-				I live in {identity.country} and I work as a {
-					identity.occupation
-				}.
-			</li>
-			{
-				identity.hobbies.length >= 2 && (
-					<li>
-						Two of my hobbies are: {identity.hobbies[0]} and{" "}
-						{identity.hobbies[1]}
-					</li>
-				)
-			}
-		</ul>
-		<p>My skills are:</p>
-		<ul>
-			{skills.map((skill) => <li class="skill">{skill}</li>)}
-		</ul>
-
-		{happy && <p>I am happy to be learning Astro!</p>}
-		{finished && <p>I finished this tutorial</p>}
+	<p>Here are a few facts about me:</p>
+	<ul>
+		<li>My name is {identity.firstName}.</li>
+		<li>
+			I live in {identity.country} and I work as a {
+				identity.occupation
+			}.
+		</li>
 		{
-			goal === 1 ? (
-				<p>My goal is to finish today.</p>
-			) : (
-				<p>My goal is not to finish today</p>
+			identity.hobbies.length >= 2 && (
+				<li>
+					Two of my hobbies are: {identity.hobbies[0]} and{" "}
+					{identity.hobbies[1]}
+				</li>
 			)
 		}
-		<Footer/>
-		<script>
-			import "../scripts/menu.js";
-		</script>
-	</body>
-</html>
+	</ul>
+	<p>My skills are:</p>
+	<ul>
+		{skills.map((skill) => <li class="skill">{skill}</li>)}
+	</ul>
+
+	{happy && <p>I am happy to be learning Astro!</p>}
+	{finished && <p>I finished this tutorial</p>}
+	{
+		goal === 1 ? (
+			<p>My goal is to finish today.</p>
+		) : (
+			<p>My goal is not to finish today</p>
+		)
+	}
+</BaseLayout>
