--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,15 +1,14 @@
 ---
 import '../styles/global.css';
+const allPosts = await Astro.glob('../pages/posts/*.md')
 import BaseLayout from '../layouts/BaseLayout.astro';
-import Footer from '../components/Footer.astro';
+import BlogPost from '../components/BlogPost.astro';
 
 const pageTitle = 'My awesome blog'
 ---
 <BaseLayout pageTitle={pageTitle}>
 	<h2>Some Posts</h2>
 	<ul>
-		<li><a href="/posts/post-1/">Post 1</a></li>
-		<li><a href="/posts/post-2/">Post 2</a></li>
-		<li><a href="/posts/post-3/">Post 3</a></li>
+		{allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
 	</ul>
 </BaseLayout>
