--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,10 +3,14 @@ html {
   font-family: sans-serif;
 }
 
+/* centered content in body  */
 body {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 80ch;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  /* center horizontal */
+  align-items: center;
   padding: 1rem;
   line-height: 1.5;
 }
